Implemented navbar with styling and animation: Added HTML structure, CSS styling, and JS for animation effect

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
+        <a href="/" id="navbar__logo">Omavisuals</a>
         <ul class="navbar__menu">
           <li class="navbar__item">
             <a href="/" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="/" class="navbar__links">About Us</a>
+            <a href="/" class="navbar__links style1">About Us</a>
           </li>
-          <a href="/" id="navbar__logo">Omavisuals</a>
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Contact Us</a>
+          
+          <li class="navbar__item"> 
+            <a href="/" class="navbar__links style2">Contact Us</a>
           </li>
           <li class="navbar__item">
             <a href="/" class="navbar__links">Gallery</a>
