--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <title>Design to code</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/0be96cd4a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- nav starts -->
 <section>
   <nav class="navbar">
-    <div class="navbar">
       <div class="navbar__container">
+        <a href="/" id="navbar__logo">Omavisuals</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <a href="/" id="navbar__logo">Omavisuals</a>
         <ul class="navbar__menu">
           <li class="navbar__item">
             <a href="/" class="navbar__links">Home</a>
@@ -34,11 +43,7 @@
             <a href="/" class="navbar__links">Gallery</a>
           </li>
         </ul>
-
       </div>
-
-    </div>
-
   </nav> 
              
 </section>
@@ -46,12 +51,29 @@
 
 <!-- hero section begins -->
 <section>
-  <div>
-    <h5>01</h5>
-    <h5>Iconic Photography</h5>
-    <h1>Photography and Beyond</h1>
+  <!-- <div class="main__container">
+    <div class="main__content">
+      <h1>NEXT GENERATION</h1>
+      <h2>TECHNOLOGY</h2>
+      <P>See what makes us different</P>
+      <button class="main__btn">
+        <a href="/">Get started</a>
+      </button>
+      <div class="main__img--container">
+        <img src="" alt="background-image" id="main__img">
+      </div>
+    </div>
+  </div> -->
+  <div class="main__container">
+    <div class="main__content">
+      <div class="container">
+      <h5>/01</h5>
+      <h5>Iconic Photography <i class="fa-solid fa-arrow-right"></i></h5>
+      <h1>Photography<h1>
+      <h1 class="typing-text"></h1>
+    </div>
+    </div> 
   </div>
-
 </section>
 <!-- hero section ends -->
 
