--- a/index.html
+++ b/index.html
@@ -340,137 +340,48 @@
 
 <!-- contact form section begins -->
 <section>
-
-  <div class="form-container">
-    <span class="big-circle"></span>
-    <img src="img/shape.png" class="square" alt="" />
-    <div class="form">
-      <div class="contact-info">
-        <h3 class="title">Let's get in touch</h3>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          dolorum adipisci recusandae praesentium dicta!
-        </p>
-
-        <div class="info">
-          <div class="information">
-            <i class="fas fa-map-marker-alt"></i> &nbsp &nbsp
-
-            <p>92 Cherry Drive Uniondale, NY 11553</p>
-          </div>
-          <div class="information">
-            <i class="fas fa-envelope"></i> &nbsp &nbsp
-            <p>lorem@ipsum.com</p>
-          </div>
-          <div class="information">
-            <i class="fas fa-phone"></i>&nbsp&nbsp
-            <p>123-456-789</p>
-          </div>
+  <div class="contact-container">
+    <div class="contact-child1">
+      <h5>SAY HELLO</h5>
+      <h3>Request a Free Quote</h3>
+      <form action="" class="form-grid">
+        <div class="form-grid1">
+          <label for="name">Name (required)</label><br>
+          <input type="text" name="name" id="" placeholder="Your name" required><br>
+          <label for="email"> Email (required)</label><br>
+          <input type="email" name="email" id="" placeholder="Your working email" required><br>
+          <label for="subject">Subject</label><br>
+          <input type="text" name="subject" id="subject" placeholder="Choose a Subject"><br>
         </div>
+        <div class="form-grid2">
+          <label for="type">Type of Shoot (required)</label><br>
+          <input type="text" name="type" id="type" placeholder="Your type of shoot" required><br>
+          <label for="phone">Phone</label><br>
+          <input type="text" name="phone" id="phone" placeholder="Your Phone Number" required><br>
+          <label for="budget">Choode a budget</label><br>
+          <select name="budget" id="budget">
+            <option value="Less than a 100k">Less than a 100k</option>
+            <option value="100k-500k">100k-500k</option>
+            <option value="Over 500k">Over 500k</option>
+            <option value="Please advice">Please advice</option>
+          </select>
+        </div>     
+      </form>
 
-        <div class="social-media">
-          <p>Connect with us :</p>
-          <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="contact-form">
-        <span class="circle one"></span>
-        <span class="circle two"></span>
-
-        <form action="index.html" autocomplete="off">
-          <h3 class="title">Contact us</h3>
-          <div class="input-container">
-            <input type="text" name="name" class="input" />
-            <label for="">Username</label>
-            <span>Username</span>
-          </div>
-          <div class="input-container">
-            <input type="email" name="email" class="input" />
-            <label for="">Email</label>
-            <span>Email</span>
-          </div>
-          <div class="input-container">
-            <input type="tel" name="phone" class="input" />
-            <label for="">Phone</label>
-            <span>Phone</span>
-          </div>
-          <div class="input-container textarea">
-            <textarea name="message" class="input"></textarea>
-            <label for="">Message</label>
-            <span>Message</span>
-          </div>
-          <input type="submit" value="Send" class="btn" />
-        </form>
-      </div>
     </div>
-  </div> 
+    <div class="contact-child2">
+      <h5>Get in touch</h5>
+      <h3>Email Us</h3>
+      <p>For project inquiries only: <br>
+        ask@omavisuals.com </p>
+       <p>For other questions: <br>
+        Info@omavisuals.com</p> 
 
-<!-- <div class="contact-section">
-  <div class="contact-section1 contact-item">
-    <h5>Say hello</h5>
-    <h3>Request a free quote</h3>
-    <form action="index.html" autocomplete="off">
-      <h3 class="title">Contact us</h3>
-      <div class="input-container">
-        <input type="text" name="name" class="input" />
-        <label for="">Name</label>
-        <span>Name</span>
-      </div>
-      <div class="input-container"></div>
-        <input type="email" name="email" class="input" />
-        <label for="">Email</label>
-        <span>Email</span>
-      </div>
-      <div class="input-container">
-        <input type="text" name="Subject" class="input" />
-        <label for="">Subject</label>
-        <span>Subject</span>
-      </div>
-
-      <div class="input-container"></div>
-        <input type="text" name="Subject" class="input" />
-        <label for="">Company</label>
-        <span>Company</span>
-      </div>
-      <div class="input-container"></div>
-        <input type="tel" name="phone" class="input" />
-        <label for="">Phone</label>
-        <span>Phone</span>
-      </div>
-      <div class="input-container textarea"></div>
-        <textarea name="message" class="input"></textarea>
-        <label for="">Message</label>
-        <span>Message</span>
-      </div>
-      <input type="submit" value="Send" class="btn" />
-    </form>
+    </div>
   </div>
 
-  <div class="contact-section2 contact-item">
-    <h5>Get in touch</h5>
-    <h3>Email us</h3>
-    <p>For project inquiries only:
-      ask@omavisuals.com</p>
-    <p>For other questions:
-      Info@omavisuals.com</p>
-  </div>
-
-</div> -->
 </section>
+<!-- contact form ends -->
 
 
 
