Add and style footer section in index.html

--- a/index.html
+++ b/index.html
@@ -388,6 +388,31 @@
 
 <!-- footer begins -->
 <section>
+  <div class="footer">
+    <div class="footer-item">
+      <h3>Omavisuals</h3>
+      <p>Photography that highlights the beauty in every moment</p>
+    </div>
+    <div class="footer-item">
+      <h4>ADDRESS</h4>
+      <p>Fanalu street off country <br> home road <br>
+        Benin City <br>
+        Nigeria</p>
+
+    </div>
+    <div class="footer-item">
+      <h4>PHONE</h4>
+      <p>
+        +234 905 258 6814 <br>
+        +234 906 825 8433
+      </p>
+
+    </div>
+    <div class="footer-item">
+        <h4>JOIN THE CLUB</h4>
+        <P>Get updates on special offers</P>
+    </div>
+  </div>
     
 </section>
 <!-- footer ends -->
