Update CSS with additional styling changes

--- a/index.html
+++ b/index.html
@@ -268,28 +268,29 @@
 <section>
   <div class="testimonial">
     <div class="t1">
-      <h3 class="testimonial-subhead">Our Clients</h3>
-      <h2>Some friends we have made while working together.</h2>
+      <h5 class="testimonial-subhead">Our Clients</h5>
+      <hr style="width: 80%;" >
+      <h2><b>Some friends we have made while working together.</b></h2>
     </div>
 
   <div class="t2">
 
     <div class="testimonial-item testItem active ">
      <img src="images/creative1.jpg" alt="" class="testimonial-img">
-     <h3 class="testimony">“I cannot express how much we love our wedding pictures from OMAVISUALS! Every photo is stunning and perfectly captures our special day. The photographer was incredibly professional and made everything easy. Thank you, OMAVISUALS, for the beautiful memories!.”</h3>
-     <h3 class="Clients-name">Tabitha Adeyomo</h3>
+     <p class="testimony">“I cannot express how much we love our wedding pictures from OMAVISUALS! Every photo is stunning and perfectly captures our special day. The photographer was incredibly professional and made everything easy. Thank you, OMAVISUALS, for the beautiful memories!.”</p>
+     <p class="Clients-name">Tabitha Adeyomo</p>
     </div>
 
     <div class="testimonial-item testItem">
      <img src="images/creative3.jpg" alt="" class="testimonial-img">
-     <h3 class="testimony">“Working with OMAVISUALS was an absolute pleasure! They made our vision come to life and captured every beautiful moment of our event.”</h3>
-     <h3 class="Clients-name">James Okoro</h3>
+     <p class="testimony">“Working with OMAVISUALS was an absolute pleasure! They made our vision come to life and captured every beautiful moment of our event.”</p>
+     <p class="Clients-name">James Okoro</p>
     </div>
 
     <div class="testimonial-item testItem">
      <img src="images/creative2.jpg" alt="" class="testimonial-img">
-     <h3 class="testimony">“The quality of the photos and professionalism was beyond our expectations. Highly recommended!”</h3>
-     <h3 class="Clients-name">Chinelo Eze</h3>
+     <p class="testimony">“The quality of the photos and professionalism was beyond our expectations. Highly recommended!”</p>
+     <p class="Clients-name">Chinelo Eze</p>
     </div>
 
   </div>
@@ -376,7 +377,6 @@
         ask@omavisuals.com </p>
        <p>For other questions: <br>
         Info@omavisuals.com</p> 
-
     </div>
   </div>
 
