Enhanced overall website styling with updated CSS and added a new page

--- a/aboutus.html
+++ b/aboutus.html
@@ -22,13 +22,13 @@
 
   <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" id="navbar__logo">Omavisuals</a>
+        <a href="/" id="navbar__logo" style="float: left;">Omavisuals</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <ul class="navbar__menu">
+        <ul class="navbar__menu" style="float: right;">
           <li class="navbar__item">
             <a href="/" class="navbar__links">Home</a>
           </li>
