Enhanced CSS for improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -308,16 +308,18 @@
 <section>
   <div class="contact-container">
     <div class="contact-child1">
+      <div class="contact-intro">
       <h5>SAY HELLO</h5>
       <h3>Request a Free Quote</h3>
+    </div>
       <form action="" class="form-grid">
         <div class="form-grid1">
           <label for="name">Name (required)</label><br>
-          <input type="text" name="name" id="" placeholder="Your name" required><br>
+          <input type="text" class="contact-input" name="name" id="" placeholder="Your name" required><br>
           <label for="email"> Email (required)</label><br>
-          <input type="email" name="email" id="" placeholder="Your working email" required><br>
+          <input type="email" class="contact-input" name="email" id="" placeholder="Your working email" required><br>
           <label for="subject">Subject</label><br>
-          <input type="text" name="subject" id="subject" placeholder="Choose a Subject"><br>
+          <input type="text" class="contact-input"5 name="subject" id="subject" placeholder="Choose a Subject"><br>
         </div>
         <div class="form-grid2">
           <label for="type">Type of Shoot (required)</label><br>
@@ -336,8 +338,10 @@
 
     </div>
     <div class="contact-child2">
+      <div class="contact-intro">
       <h5>Get in touch</h5>
       <h3>Email Us</h3>
+    </div>
       <p>For project inquiries only: <br>
         ask@omavisuals.com </p>
        <p>For other questions: <br>
