Refined CSS for enhanced mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body class="">
 
-  <div class="cursor">
+  <!-- <div class="cursor">
     <div class="cursor__ball cursor__ball--big ">
       <svg height="30" width="30">
         <circle cx="15" cy="15" r="12" stroke-width="0"></circle>
@@ -43,7 +43,7 @@
         <circle cx="5" cy="5" r="4" stroke-width="0"></circle>
       </svg>
     </div>
-  </div>
+  </div> -->
 
 
   
@@ -117,7 +117,7 @@
     <img src="images/lifestyle3.jpg" alt="">
     <img src="images/lifestyle4.jpg" alt="">
   
-    <h3>LIFESTYLE</h3>
+    <h3>01. LIFESTYLE</h3>
   </div>
   <div class="image-category-line">
   <hr>
@@ -132,7 +132,7 @@
     <img src="images/wedding3.jpg" alt="">
     <img src="images/wedding4.jpg" alt="">
   
-    <h3>WEDDING</h3>
+    <h3>02. WEDDING</h3>
   </div>
   <div class="image-category-line">
     <hr>
@@ -145,7 +145,7 @@
     <img src="images/studio3.jpg" alt="">
     <img src="images/studio4.jpg" alt="">
     <img src="images/lifestyle1.jpg" alt="">
-    <h3>STUDIO</h3>
+    <h3>03. STUDIO</h3>
   </div>
   <div class="image-category-line">
     <hr>
@@ -158,7 +158,7 @@
     <img src="images/creative2.jpg" alt="">
     <img src="images/creative3.jpg" alt="">
     <img src="images/creative4.jpg" alt="">
-    <h3>CREATIVE</h3>
+    <h3>04. CREATIVE</h3>
   </div>
   <div class="image-category-line">
     <hr>
