Refined CSS for enhanced mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
   <h3>Our latest works</h3>
  </div>
  <div class="showcase-gallery">
-  <img class="showcase-gallery-image one" src="images/latest-images1.jpg" alt="">
-  <img class="showcase-gallery-image two" src="images/latest-images2.jpg" alt="">
-  <img class="showcase-gallery-image three" src="images/latest-images3.jpg" alt="">
-  <img class="showcase-gallery-image four" src="images/latest-images5.jpg" alt="">
-  <img class="showcase-gallery-image five" src="images/latest-images4.jpg" alt="">
+  <div class="mob"><img class="showcase-gallery-image one mobile" src="images/latest-images1.jpg" alt=""></div>
+  <div class="mob"><img class="showcase-gallery-image two mobile" src="images/latest-images2.jpg" alt=""></div>
+  <div class="mob"><img class="showcase-gallery-image three mobile" src="images/latest-images3.jpg" alt=""></div>
+  <div class="mob"><img class="showcase-gallery-image four mobile" src="images/latest-images5.jpg" alt=""></div>
+  <div class="mob"><img class="showcase-gallery-image five mobile" src="images/latest-images4.jpg" alt=""></div>
  </div>
   
 </section>
