--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <!-- about us begins -->
 <section>
-  <div class="about-us-text">
+  <div class="about-us-title">
     <p>About us</p>
     <h3>We love what we do</h3>
   </div>
